==================================================================================================
Changes for 2.9.7 release 
==================================================================================================
- Bug fix: Modified the DAC timing diagnostic code:
	- DAC error bit in STATEWORD will now latch.
	- 18 bit DAC timing fault now requires two consecutive errors detected before performing
	  a DAC kill.
==================================================================================================
Changes for 2.9.5 release 
==================================================================================================
- Bug fix for True RMS part as per and tested by M. Evans.
==================================================================================================
Changes for 2.9.4 release 
==================================================================================================
- Changes to account for June 30, 2015 leap second.
   - Modified timing.c and spectracom.c files to add leap second. This code should be redone in
     next major release as it is not well done here.
   - Dataviewer fixed by adding to leap second list in src/dv/Lib/UTC_GPS/leapsecs.txt
   - gds/tconv.c modified.
==================================================================================================
Changes for 2.9.3 release 
==================================================================================================
- Bug Fix (850): SDF changes. 
- As requested for Guardian, changed skeleton.st to read filter module ramp time values before
  offsets and gains.
==================================================================================================
Changes for 2.9.2 release 
==================================================================================================
- Bug Fix: IPC errors when using RFM DMA mode.  Modified controller.c to verify that RFM DMA