@@ -1,4 +1,9 @@
 ==================================================================================================
+Changes POST 2.9.7 release 
+==================================================================================================
+Bug Fix: Old watchdog (Wd.pm) part was never updated to support real-time EPICS DAQ. This fix
+  was also done to branch-2.8, used by PDE at MIT.
+==================================================================================================
 Changes for 2.9.7 release 
 ==================================================================================================
 - Bug fix: Modified the DAC timing diagnostic code:
